concord_examples/tests/ui/auth_endpoint_unknown.stderr
error: unknown auth endpoint `auth::LoginMissing` in credential source
 --> tests/ui/auth_endpoint_unknown.rs:6:43
  |
6 |             credential session = endpoint auth::LoginMissing // ERROR: unknown endpoint reference
  |                                           ^^^^
